tests-integration/fixtures/checking/230_record_expression_missing_and_additional/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
test :: { a :: Int, b :: Int }

Types

Diagnostics
error[PropertyIsMissing]: Missing required properties: b
  --> 3:1..3:31
  |
3 | test :: { a :: Int, b :: Int }
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[AdditionalProperty]: Additional properties not allowed: c
  --> 3:1..3:31
  |
3 | test :: { a :: Int, b :: Int }
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
